--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
     "authors": [
         {
             "name": "kpicaza"
+        },
+        {
+            "name": "pcs289"
+        },
+        {
+            "name": "xserrat"
         }
     ],
     "require": {
@@ -48,6 +54,11 @@
         "test": "phpunit --colors=always",
         "psalm": "psalm",
         "infection": "XDEBUG_MODE=coverage roave-infection-static-analysis-plugin"
+    },
+    "extra": {
+        "laminas": {
+            "config-provider": "Pheature\\Crud\\Toggle\\Container\\ConfigProvider"
+        }
     },
     "config": {
         "sort-packages": true
