--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "pheature/toggle-core": "^0.1"
+        "pheature/toggle-core": "^0.1",
+        "psr/event-dispatcher": "^1.0"
     },
     "require-dev": {
         "icanhazstring/composer-unused": "^0.7.5",
