--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.4|>=8.0",
         "pheature/toggle-core": "^0.2",
         "psr/event-dispatcher": "^1.0"
     },
     "require-dev": {
         "icanhazstring/composer-unused": "^0.7.5",
         "infection/infection": "^0.25",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpro/grumphp": "^1.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
