--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,11 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "infection/extension-installer": true,
+            "icanhazstring/composer-unused": true,
+            "phpro/grumphp": true
+        }
     }
 }
