--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.4|>=8.0",
-        "pheature/toggle-core": "^0.3",
+        "php": "^7.4|^8.0|^8.1",
+        "pheature/toggle-core": "^0.5",
         "psr/event-dispatcher": "^1.0"
     },
     "require-dev": {
