--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "~8.0.0|~8.1.0|~8.2.0|~8.3.0",
-        "pheature/toggle-core": "^0.7",
+        "pheature/toggle-core": "^0.8",
         "psr/event-dispatcher": "^1.0"
     },
     "require-dev": {
@@ -28,8 +28,8 @@
         "phpunit/phpunit": "^8.0 || ^9.0",
         "roave/infection-static-analysis-plugin": "^1.18",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/var-dumper": "^4.2 || ^5.0 || ^6.0",
-        "vimeo/psalm": "^4.4"
+        "symfony/var-dumper": "^4.2 || ^5.0 || ^6.0 || ^7.0",
+        "vimeo/psalm": "^4.4|^5.16"
     },
     "autoload": {
         "psr-4": {
